Ajustes de textos

--- a/source/pug/pages/tema-1.pug
+++ b/source/pug/pages/tema-1.pug
@@ -20,7 +20,7 @@
                     .col-12
                         .header-ecored
                             h1#tema-10.texto-morado 1. Conceptos de pre-patronaje
-                        p.mt-5.pr-2.pr-md-5 El cuerpo humano es una estructura base que se debe entender para poder #[strong interpretar su comportamiento y sus necesidades vestimentales]. Para lo cual se deben tener en cuenta los siguientes conceptos 
+                        p.mt-5.pr-2.pr-md-5 El cuerpo humano es una estructura base que se debe entender para poder #[strong interpretar su comportamiento y sus necesidades vestimentales]. Para lo cual es fundamental tener en cuenta los siguientes conceptos 
                     .col-12.text-center    
                         img(src="assets/images/pages/tema-1/tema-1-2.svg").img-fluid.mt-5
                 .row.mt-5 
@@ -138,8 +138,8 @@
                                 .col-4 
                                     img(src="assets/images/pages/tema-1/tema-1-12.svg").img-fluid
                                 .col-8.text-left 
-                                    h3.font-weight-normal.texto-morado Posición #[strong anatómica] 
-                                    p.mt-5 Es aquella que se considera adecuada para el estudio anatómico del cuerpo humano. consiste en:
+                                    h3.font-weight-normal.texto-morado Posición #[strong neutra] 
+                                    p.mt-5 Es la posición natural de la columna cuando se mantienen sus 3 curvas fisiológicas. A diferencia de la anatómica las palmas de las manos descansan sobre el cuerpo en los laterales del muslo.
                         .col-12.col-md-5.offset-md-1.mt-4 
                             .row 
                                 .col.text-right 
@@ -209,7 +209,7 @@
                     .col-12.col-md-6 
                         img(src="assets/images/pages/tema-1/tema-1-14.svg").img-fluid
                     .col-12.col-md-6 
-                        h1.mt-5 Estudio de las #[strong.texto-morado proporciones y las medidas del cuerpo humano.] 
+                        h1.mt-5 Es el estudio de las #[strong.texto-morado proporciones y las medidas del cuerpo humano.] 
             
             .container.border-bot-morado  
                 .row.ml-md-5.my-5  
@@ -223,7 +223,7 @@
                 .row.ml-md-5.my-5  
                     .col-12 
                         h2.texto-morado Biomecánica
-                        p.mt-5 Es un área de conocimiento que #[strong estudia la actividad física de nuestro cuerpo en circunstancias y condiciones diferentes]; analiza las consecuencias mecánicas que se derivan de esas actividades en nuestra vida cotidiana, en el trabajo, haciendo deporte, etc.
+                        p.mt-5 Es un área de conocimiento que #[strong estudia la actividad física del cuerpo en circunstancias y condiciones diferentes]; analiza las consecuencias mecánicas que se derivan de esas actividades en la vida cotidiana, en el trabajo, haciendo deporte, etc.
                     .col-12.mt-5.text-center 
                         img(src="assets/images/pages/tema-1/tema-1-16.svg").img-fluid
                         img(src="assets/images/pages/tema-1/tema-1-17.svg").img-fluid.mt-5
@@ -240,27 +240,27 @@
                             p.text-white #[strong Ectomorfo] - Estructura ligera
                         .col-12.text-left
                             p.mt-5 Se caracteriza por tener estructura delgada y huesos largo, poca grasa y poco músculo. 
-                            p.mt-5 #[strong Complexión delgada,] estructura fina, fibroso, no gana peso con facilidad, metabolismo rápido, pecho plano, hombros pequeños.
+                            p.mt-5 #[strong Complexión delgada,] estructura fina, fibroso, no gana peso con facilidad, metabolismo rápido, pecho plano y hombros pequeños.
                     .col-12.col-md-4.text-center 
                         img(src="assets/images/pages/tema-1/tema-1-19.svg").img-fluid
                         .col-11.mt-5.py-3.pl-3.bg-morado-mediano.rounded
                             p.text-white #[strong Mesomorfo] - Estructura mediana
                         .col-12.text-left
                             p.mt-5 Se distingue por tener una musculatura natural y poca grasa. Los huesos son largos y semi-gruesos. #[strong Se dice que es el ideal para el físico constructivo.]  
-                            p.mt-5 #[strong Complexión atlética,] cuerpo duro con músculos definidos,  es fuerte de forma natura, gana músculo fácilmente, engorda con más facilidad que los ectomorfos, hombros anchos.
+                            p.mt-5 #[strong Complexión atlética,] cuerpo duro con músculos definidos,  es fuerte de forma natural, gana músculo fácilmente, engorda con más facilidad que los ectomorfos y hombros anchos.
                     .col-12.col-md-4.text-center 
                         img(src="assets/images/pages/tema-1/tema-1-20.svg").img-fluid
                         .col-11.mt-5.py-3.pl-4.bg-morado.rounded
                             p.text-white #[strong Endoformo] - Estructura pesada
                         .col-12.text-left
                             p.mt-5 Se distingue por tener un cuerpo grande de huesos gruesos, con mucha grasa y con gran facilidad para obtener más de ésta.  
-                            p.mt-5 #[strong Complexión blanda y redonda,] suele ser bajo y fornido, gana músculo fácilmente,  engorda fácilmente, le cuesta perder grasa, metabolismo lento, hombros anchos.
+                            p.mt-5 #[strong Complexión blanda y redonda,] suele ser bajo y fornido, gana músculo fácilmente,  engorda fácilmente, le cuesta perder grasa, metabolismo lento y hombros anchos.
                     
             .container.pr-0.pl-4.mt-5    
                 .row
                     .col-12 
                         h1.texto-gris La gran mayoría de nosotros somos #[strong.texto-morado una combinación de dos somatotipos.]
-                        p.mt-4 Las más comunes son: #[strong mesoectomorfo - mesoenfomorfo.]
+                        p.mt-4 Las más comunes son: #[strong mesoectomorfo y mesoenfomorfo.]
                     .col-12.mt-4.text-center 
                         img(src="assets/images/pages/tema-2/tema-2-1.svg").img-fluid
                 .row.mt-5 
@@ -310,7 +310,7 @@
                     .row.mt-5.ml-md-5.pr-5.mr-md-5 
                         .col-12 
                             h2.texto-morado Evaluación de aplomos - postura
-                            p.mt-4 Asociado a la correlación entre las extremidades y el tronco y a las posiciones de las articulaciones.
+                            p.mt-4 Asociado a la correlación entre las extremidades y el tronco, con las posiciones de las articulaciones
                             .row.mt-4 
                                 .col.text-right 
                                     img(src="assets/images/icons/vineta.svg").img-fluid
@@ -418,7 +418,7 @@
                         h3.mt-3.texto-morado 1 Pulgada = 1 IN = 1"
                     .col-12.pr-5.mt-5
                         .col-12 
-                            p En confección: Se utiliza la pulgada para como medida de estandarización que mide el número de puntadas por pulgada PPP:
+                            p En confección se utiliza la pulgada para como medida de estandarización que mide el número de puntadas por pulgada PPP:
                         .row.mt-5
                             .col.text-right 
                                 img(src="assets/images/icons/vineta.svg").img-fluid
@@ -444,10 +444,10 @@
                     .col-12.mt-5.pl-md-5.pb-5.border-bot-morado
                         h3.mb-0.mt-5.texto-morado Sistema métrico decimal o universal 
                         p.mt-5  Es un sistema de unidades en el cual los múltiplos o submúltiplos de las unidades de una misma naturaleza siguen una escala decimal (10).             
-                        p.mt-5 #[strong En confección:] se utiliza para verificar medidas finales de la prenda. Los rangos de tolerancia de una costura se miden en milímetros.
+                        p.mt-5 #[strong En confección:] Se utiliza para verificar medidas finales de la prenda. Los rangos de tolerancia de una costura se miden en milímetros.
                         p ▪ Algunos Insumos de confección, se caracterizan por centímetros.
                         p ▪ El ancho de los materiales textiles se mide en centímetros. Los textiles al detal se venden por metros.
-                        p.mt-5 #[strong En patronaje:] la mayoría de los cuadros de tallas anatómicas e industriales, en todas las líneas, están construidos en centímetros que es el sistema métrico estandarizado para el proceso de toma de medidas, patronaje y corte de las prendas. Las reducciones o ampliaciones para el confort de la prenda se realizan en centímetros.
+                        p.mt-5 #[strong En patronaje:] La mayoría de los cuadros de tallas anatómicas e industriales, en todas las líneas, están construidos en centímetros que es el sistema métrico estandarizado para el proceso de toma de medidas, patronaje y corte de las prendas. Las reducciones o ampliaciones para el confort de la prenda se realizan en centímetros.
                         .col-12.mt-5.text-center 
                             p.font-weight-bold El centímetro
                             img(src="assets/images/pages/tema-2/tema-2-29.svg").img-fluid.mt-2
@@ -1182,7 +1182,6 @@
                 .header-ecored  
                     h2.texto-morado 1.3.2. Cuadros de Tallas
                 .col-12.px-5
-                    p Expresión breve y precisa del modo de hacer, resolver o conseguir algo. Calculo estandarizado para obtener un resultado.
                     p.mt-5 #[strong.texto-morado ▪	Anatómicos y Deducidos:] de acuerdo con la obtención de medidas.
                     p.mt-2 #[strong.texto-morado ▪	Proporcionales:] existe una secuencia numérica en el crecimiento de la talla.
                     p.mt-2 #[strong.texto-morado ▪	No proporcionales:] no existe una secuencia numérica en el crecimiento de la talla.
@@ -1795,20 +1794,23 @@
                             .col-8
                                 #v-pills-tabContent.tab-content
                                     #v-pills-1.tab-pane.fade.show.active(role='tabpanel', aria-labelledby='v-pills-1-tab')
-                                        | ...
+                                        | Identificar qué tipo de plano se va a trabajar, si es un plano unido, separado o montado.
                                     #v-pills-2.tab-pane.fade(role='tabpanel', aria-labelledby='v-pills-2-tab')
-                                        | ...
+                                        | Todo básico inicia siempre desde un rectángulo, el cual se traza con la medida de contorno más protuberante y el largo más largo de la parte del cuerpo a trabajar
                                     #v-pills-3.tab-pane.fade(role='tabpanel', aria-labelledby='v-pills-3-tab')
                                         .col-12.px-4.align-self-center.mt-5
-                                            p Por lo general el trazo de moldes se suele hacer con papel trazo o manifold, dicho papel tiene dos caras, una cara que al tacto es liso y visualmente brillante; otra que al tacto es corrugada y visualmente opaca. Por lo general se recomienda trabajar por la parte corrugada con el fin de tener una mejor adhesión del grafito (lápiz) y de no permitir que rebote la luz, es recomendable trabajar en papel blanco con el fin de no cansar la vista y descansar la mente.
+                                            p Por lo general el manual trabaja con fórmulas o convenciones, en la mayoría de los casos la medida más protuberante es sustituida por una letra, por ejemplo, en infantil, contorno de pecho (medida más protuberante de la cintura para arriba) equivale o es igual a la letra "B"
                                             h3.mt-5.mb-0  B = Contorno de pecho de la talla a trabajar.
                                             h3 #[strong Talla 6: B = 68Cm] (Contorno de pecho del cuadro de tallas correspondiente a la talla 6).
                                     #v-pills-4.tab-pane.fade(role='tabpanel', aria-labelledby='v-pills-4-tab')
-                                        | ...
+                                        | El largo inicial del rectángulo se trabaja con la medida más larga de la parte del cuerpo a trabajar, por ejemplo en el pantalón es: largo de pantalón, en la falda: altura de rodilla, en el superior: largo de talle posterior.
                                     #v-pills-5.tab-pane.fade(role='tabpanel', aria-labelledby='v-pills-5-tab')
-                                        | ...
+                                        .col-12.px-4.align-self-center.mt-5
+                                            p Las medidas que se trabajan en la metodología en algunos casos únicamente se saca del cuadro de talla, la medida de contorno y largo, no se trabajan medidas como hombro, anchos, cuello y demás. Dichas medidas salen por formula o como se trabaja en temas anteriores por medidas deducidas.
+                                            h3.mt-5.mb-0  En infantil la medida de cuello posterior equivale a:
+                                            h3 #[strong B/20+2.5] = B (Contorno de pecho) / 20 + 2.5
                                     #v-pills-6.tab-pane.fade(role='tabpanel', aria-labelledby='v-pills-6-tab')
-                                        | ...
+                                        | Por lo general el trazo de moldes se suele hacer con papel trazo o manifold, dicho papel tiene dos caras, una cara que al tacto es liso y visualmente brillante; otra que al tacto es corrugada y visualmente opaca. Por lo general se recomienda trabajar por la parte corrugada con el fin de tener una mejor adhesión del grafito (lápiz) y de no permitir que rebote la luz, es recomendable trabajar en papel blanco con el fin de no cansar la vista y descansar la mente.
 
 
 
@@ -1948,7 +1950,7 @@
                 .header-ecored 
                     h2#tema-17.texto-morado 1.7 Elaboración de básicos femeninos
                 p.mt-5 Cómo se referencia en temas anteriores, se debe iniciar revisando y analizando el cuadro de tallas para identificar: la talla, las medidas, incrementos y diferencias que se va a trabajar. El desarrollo de básicos funciona de la siguiente forma:
-                p.mt-5 ▪  Tipo de plano: identificar qué tipo de plano se va a trabajar, si es un plano unido, separado o montado.
+                p.mt-5 #[strong ▪  Tipo de Plano:] identificar qué tipo de plano se va a trabajar, si es un plano unido, separado o montado.
                 p.mt-5 #[strong ▪  Rectángulo:] todo básico inicia siempre desde un rectángulo, el cual se traza con la medida de contorno más protuberante y el largo más largo de la parte del cuerpo a trabajar.
                 p.mt-5 #[strong ▪  Cuadro de tallas:] en el caso de femenino, para la elaboración de los básicos se trabaja con las medidas del cuadro de tallas, es decir cada punto de referencia sobre el cuerpo es trabajado del cuadro de tallas, a diferencia de lo anterior, este desarrollo hace necesario identificar todo el listado de las medidas que se van a implementar para hacer el desarrollo.
                 p.my-5 #[strong ▪  Manejo del papel:] por lo general el trazo de moldes se suele hacer con papel trazo o manifold, dicho papel tiene dos caras, una cara que al tacto es liso y visualmente brillante y otra que al tacto es corrugada y visualmente opaca, por lo general se recomienda trabajar por la parte corrugada con el fin de tener una mejor adhesión del grafito (lápiz) y de no permitir que rebote la luz, es recomendable trabajar en papel blanco con el fin de no cansar la vista y descansar la mente.
