--- a/source/pug/pages/tema-2.pug
+++ b/source/pug/pages/tema-2.pug
@@ -240,7 +240,7 @@
                                 #collapse2.collapse.show(aria-labelledby='heading2', data-parent='#accordionExample')
                                     .card-body
                                         .row
-                                            .col-12.col-md-4.text-center
+                                            .col-12.col-md-12.text-center
                                                 img(src="assets/images/pages/tema-5/tema-5-31.png").img-fluid
                             .card
                                 #heading3.card-header
@@ -250,14 +250,14 @@
                                 #collapse3.collapse.show(aria-labelledby='heading3', data-parent='#accordionExample')
                                     .card-body
                                         .row
-                                            .col-6.col-md-4.text-center
+                                            .col-6.col-md-6.text-center
                                                 img(src="assets/images/pages/tema-5/tema-5-32.png").img-fluid
-                                            .col-6.col-md-4.text-center
+                                            .col-6.col-md-6.text-center
                                                 img(src="assets/images/pages/tema-5/tema-5-33.png").img-fluid
                                         .row
-                                            .col-6.col-md-4.text-center
+                                            .col-6.col-md-6.text-center
                                                 img(src="assets/images/pages/tema-5/tema-5-34.png").img-fluid
-                                            .col-6.col-md-4.text-center
+                                            .col-6.col-md-6.text-center
                                                 img(src="assets/images/pages/tema-5/tema-5-35.png").img-fluid
                             .card
                                 #heading4.card-header
@@ -267,7 +267,7 @@
                                 #collapse4.collapse.show(aria-labelledby='heading4', data-parent='#accordionExample')
                                     .card-body
                                         .row
-                                            .col-12.col-md-4.text-center
+                                            .col-12.col-md-12.text-center
                                                 img(src="assets/images/pages/tema-5/tema-5-36.png").img-fluid
                             .card
                                 #heading5.card-header
@@ -277,7 +277,7 @@
                                 #collapse5.collapse.show(aria-labelledby='heading5', data-parent='#accordionExample')
                                     .card-body
                                         .row
-                                            .col-12.col-md-4.text-center
+                                            .col-12.col-md-12.text-center
                                                 img(src="assets/images/pages/tema-5/tema-5-37.png").img-fluid
                             .card
                                 #heading6.card-header
@@ -584,7 +584,7 @@
                                         h3.mb-0 Punta de aguja
                                     p.mt-5 Determina el tipo de tejido a coser, desde el más fino hasta el más pesado. 
                                         .col-12.ml-1.ml-md-4.mb-4 
-                                            a(href="media/documentos/PuntasdeDesplazamiento_Groz-Beckert.pdf") 
+                                            a(href="media/documentos/PuntasdeDesplazamiento_Groz-Beckert.pdf", target="_blank") 
                                                 .col-12.col-md-7.mt-5.rounded.bg-morado-ligero
                                                     .row.py-3.px-3 
                                                         .col.d-none.d-lg-flex 
