--- a/source/pug/pages/referencias.pug
+++ b/source/pug/pages/referencias.pug
@@ -14,7 +14,7 @@ include ../mixins/functions
 
         +referenciaItem("Gutiérrez, L. y Moncayo, A. (2011). Manual de patronaje básico e interpretación de diseños. Bogotá: SENA, Japan Inernational Cooperation Agency jica, 2011. ","")
 
-        +referenciaItem("Pulgarín, B. y Ulloa, J. (1998). La evolución de las máquinas y su aplicación en la industria de la confección Colombiana. ","https://sena-primo.hosted.exlibrisgroup.com/permalink/f/1j5choe/sena_aleph000009660")
+        +referenciaItem("Pulgarín, B. y Ulloa, J. (1998). La evolución de las máquinas y su aplicación en la industria de la confección Colombiana. ","https://sena-primo.hosted.exlibrisgroup.com/permalink/f/1j5choe/sena_aleph000009660","https://sena-primo.hosted.exlibrisgroup.com/permalink/f/1j5choe/sena_aleph000009660")
 
         .row.justify-content-between.align-items-center
 
