--- a/source/pug/pages/tema-1.pug
+++ b/source/pug/pages/tema-1.pug
@@ -614,7 +614,7 @@
                                 #nav-04.tab-pane.fade.show.active(role='tabpanel', aria-labelledby='nav-04-tab')
                                     .row.p-5
                                         .col-12.col-md-4
-                                            img(src="assets/images/pages/tema-3/tema-3-5.svg").img-fluid
+                                            img(src="assets/images/pages/tema-3/tema-3-30.png").img-fluid
                                         .col-12.col-md-8.pr-5  
                                             p Modelo o prototipo que reúne las características que se consideran perfectas en su género, especialmente el referido a la figura humana que reúne las proporciones ideales.
                                         
@@ -630,7 +630,7 @@
                                 #nav-06.tab-pane.fade(role='tabpanel', aria-labelledby='nav-06-tab')
                                     .row.p-5
                                         .col-12.col-md-4
-                                            img(src="assets/images/pages/tema-3/tema-3-5.svg").img-fluid
+                                            img(src="assets/images/pages/tema-3/tema-3-29.png").img-fluid
                                         .col-12.col-md-8.pr-5  
                                             p Modelo o prototipo que reúne las características que se consideran perfectas en su género, especialmente el referido a la figura humana que reúne las proporciones ideales.
                                             p.mt-5 ▪  Griegos Policleto y Lisipo canon de 7 y 7 ½ cabezas.
@@ -639,7 +639,7 @@
                                 #nav-07.tab-pane.fade(role='tabpanel', aria-labelledby='nav-07-tab')
                                     .row.p-5
                                         .col-12.col-md-4
-                                            img(src="assets/images/pages/tema-3/tema-3-5.svg").img-fluid
+                                            img(src="assets/images/pages/tema-3/tema-3-31.png").img-fluid
                                         .col-12.col-md-8.pr-5  
                                             p Para calcular un cuadro de tallas completo se utiliza generalmente dos medidas anatómicas:
                                             p.mt-5 ▪  La altura o estatura total 
@@ -933,10 +933,8 @@
                                 .col-1
                                     p #[strong.texto-morado =] 
                                 .col-5
-                                    p 1/2 de brazo     
-                            .row 
-                                .col-12.mb-5
-                                    span.text-small Esta medida sin tener en cuenta lo que corresponde a la muñeca (menos 5cms para todas las tallas).
+                                    p 1/2 de brazo   
+                                        span.text-small Esta medida sin tener en cuenta lo que corresponde a la muñeca (menos 5cms para todas las tallas).
                             .row
                                 .col-5 
                                     p Cintura al Suelo  
@@ -1596,6 +1594,14 @@
                                                     p ▪	Referencia.
                                                     p ▪	Nombre de la pieza.
                                                     p ▪	N° de veces a cortar.
+                                                    h3.mt-5 Piquetes
+                                                    a(href="media/documentos/Diapositivas53-60.pdf", target="_blank")
+                                                            .col-12.rounded.bg-azul-claro
+                                                                    .row.py-2.px-3 
+                                                                        .col.align-self-center 
+                                                                            img(src="assets/images/icons/anexo-button.svg").img-fluid
+                                                                        .col-9.align-self-center 
+                                                                            p #[strong Recurso.] Almohada de corazón
                                                 .col-12.col-md-5.mt-5 
                                                     h3.mb-0 Tipo de material 
                                                     p ▪	Asignación de corte por material.
@@ -1612,16 +1618,8 @@
                                                     p ▪	Tipo de material
                                                     p ▪	N° de pieza en el tendido
 
-                                                    h3.mt-5 Piquetes
-                                            
-                                            .row.mt-5.pl-4
-                                                a(href="media/documentos/Diapositivas53-60.pdf", target="_blank")
-                                                    .col-12.rounded.bg-azul-claro
-                                                            .row.py-2.px-3 
-                                                                .col.align-self-center 
-                                                                    img(src="assets/images/icons/anexo-button.svg").img-fluid
-                                                                .col-9.align-self-center 
-                                                                    p #[strong Recurso.] Almohada de corazón
+                                             
+                                                        
                             
                             .card
                                 #heading6.card-header
