--- a/source/pug/pages/tema-2.pug
+++ b/source/pug/pages/tema-2.pug
@@ -913,7 +913,7 @@
                                     .col-5.col-md-3.mt-5.ml-md-3.pt-3.offset-1.rounded-pill.bg-morado-ligero.texto-naranja 
                                         p #[strong Apariencia] de la pulgada
                                     .col-8.col-md-5.mt-5.ml-md-3.pt-3.offset-2.rounded-pill.bg-morado-ligero.texto-naranja 
-                                        p #[strong Eslasticidad de la costura] en telas
+                                        p #[strong Elasticidad de la costura] en telas
                         .row.mt-5 
                             .col-12.mt-5 
                                 h3.mb-0 Resistencia de la costura
