--- a/source/assets/scss/base/_base.scss
+++ b/source/assets/scss/base/_base.scss
@@ -74,6 +74,11 @@ a{
   color: #00223D !important;
 }
 
+a.linkRef{
+  color: #2C7BE5 !important;
+}
+
+
 .table {
     border-bottom: 1px solid $base-color-light;
     border-bottom: 1px solid $base-color-light;
